# vcpkg

.github/workflows/: verify-build.yaml  verify-pulsar-client-cpp.yaml
example/: CMakeLists.txt  main.cc  vcpkg.json
ports/curl/: portfile.cmake
ports/pulsar-client-cpp/: 0001-protobuf-generate.patch  0002-macos-framework.patch  0003-rpath-install.patch  portfile.cmake  pulsar-config.cmake  usage  vcpkg.json
versions/: baseline.json
versions/c-/: curl.json
versions/p-/: pulsar-client-cpp.json
